Working Minimax AI! It's ugly, I'm a JS noob ;).

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This is a modified version of 2048. The original can be found at <a href="http://gabrielecirulli.github.io/2048/">http://gabrielecirulli.github.io/2048/</a>.
     </p>
     <hr>
     <p>
@@ -78,6 +78,8 @@
     </p>
   </div>
 
+  <script src="js/MiniMax2048.js"></script>
+  <script src="js/JS_MinimaxBestMove.js"></script>
   <script src="js/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
