Improved AI (prob6tune1).

--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Don't do anything! Just watch and learn :).
     </p>
     <hr>
     <p>
     <strong class="important">Note:</strong> This is a modified version of 2048. The original can be found at <a href="http://gabrielecirulli.github.io/2048/">http://gabrielecirulli.github.io/2048/</a>.
     </p>
+    <p>
+    The game rules are still exactly the same, but the game does not end when the 2048 tile is created.
+    </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Artificial Intelligence created by <a href="http://www.maartenbaert.be/" target="_blank">Maarten Baert</a>. Original game created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a>
     </p>
   </div>
 
